# gwei-name-deploy

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: OPERATOR_GUIDE.md
examples/minimal-site/: index.html
src/gwei_name_deploy/: __init__.py  __main__.py  cli.py  config.py  constants.py  gns.py  history.py  inputs.py  ipfs.py  json_store.py  models.py  payments.py  registration.py  state.py
tests/: test_cli.py  test_config.py  test_gns.py  test_history.py  test_inputs.py  test_ipfs.py  test_payments.py  test_registration.py  test_state.py
