[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gwei-name-deploy"
version = "0.1.0"
description = "Register a .gwei name and deploy its website from the command line."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "gwei-name-deploy contributors" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
  "ens-normalize>=3,<4",
  "multiformats>=0.3,<1",
  "requests>=2.32,<3",
  "rich>=13.9,<15",
  "typer>=0.16,<1",
  "web3>=7.12,<8",
]

[project.scripts]
gwei-name = "gwei_name_deploy.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.3,<10",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gwei_name_deploy"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
